# llm_observatory

./: .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
api/: .env.example  Dockerfile  main.py  requirements.txt
api/tests/: conftest.py  test_auth.py  test_metrics.py
dashboard/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
dashboard/src/: App.tsx  api.ts  index.css  types.ts  vite-env.d.ts
scripts/: .env.example  benchmark.py  cleanup_db.py  code_validator.py  requirements.txt  seed_demo_data.py
sdk/: README.md  pyproject.toml
sdk/examples/: demo.py
sdk/llm_observatory/: __init__.py  client.py  tracker.py  types.py
sdk/tests/: conftest.py  test_client.py  test_tracker.py  test_types.py
supabase/: schema.sql
