[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-observatory"
version = "1.0.0"
description = "Lightweight observability for LLM API usage"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "openai>=1.0",
    "anthropic>=0.18",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["llm_observatory"]

